Fix gmail login missing save password prompt.

Bug: 807609
Change-Id: I741ea806445bb16d992641611ac7ecf8a8a95208